--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Lin's Blog
+title: Lin's World
 description: I have nothing to say anymore.
 keywords: Modern, Fun
 author: Lin
