--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Lin's World
 description: I have nothing to say anymore.
 keywords: Modern, Fun
 author: Lin
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+baseurl: "/linjie2019.github.io" # the subpath of your site, e.g. /blog/
+url: "http://linjie2019.github.com" # the base hostname & protocol for your site
