--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Lin's World
 description: I have nothing to say anymore.
-keywords: Modern, Fun
+keywords: Horizon, Fun
 author: Lin
 baseurl: "/linjie2019.github.io" # the subpath of your site, e.g. /blog/
 url: "http://linjie2019.github.io" # the base hostname & protocol for your site
